compiler/eliminateAutobox/TestIntBoxing.java crashes on arm32 after 8264649 in debug VMs

XMLWordPrintable

    • 17
    • b21
    • arm
    • linux

      The change made by JDK-8264649 seems to break the test case compiler/eliminateAutobox/TestIntBoxing.java on 32-bit arm in fastdebug builds. This is a bit weird to me, since it looks like the change should actually fix the problem.

      The JVM crashes with:

      ACTION: main -- Failed. Unexpected exit from test [exit code: 1]
      REASON: User specified action: run main/othervm -Xbatch -XX:+IgnoreUnrecognizedVMOptions -XX:+EliminateAutoBox compiler.eliminateAutobox.TestIntBoxing
      TIME: 7.335 seconds
      messages:
      command: main -Xbatch -XX:+IgnoreUnrecognizedVMOptions -XX:+EliminateAutoBox compiler.eliminateAutobox.TestIntBoxing
      reason: User specified action: run main/othervm -Xbatch -XX:+IgnoreUnrecognizedVMOptions -XX:+EliminateAutoBox compiler.eliminateAutobox.TestIntBoxing
      Mode: othervm [/othervm specified]
      elapsed time (seconds): 7.335
      configuration:
      STDOUT:
       715 AddI === _ 564 109 [[]] !jvms: TestIntBoxing::remi_sump_deop @ bci:-1 (line 504)
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/compile.cpp:2375
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/cgo/dev/openjdk/jdk/src/hotspot/share/opto/compile.cpp:2375), pid=18855, tid=18866
      # fatal error: no reachable node should have no use
      #
      # JRE version: OpenJDK Runtime Environment (17.0+18) (fastdebug build 17-internal+18-ahead-146--e16d568c1f5d7030b9e038e21fb3815ae5b1163a)
      # Java VM: OpenJDK Server VM (fastdebug 17-internal+18-ahead-146--e16d568c1f5d7030b9e038e21fb3815ae5b1163a, mixed mode, serial gc, linux-arm)
      # Problematic frame:
      # V [libjvm.so+0x63dea8] Compile::check_no_dead_use() const+0x34c
      #
      # CreateCoredumpOnCrash turned off, no core file dumped
      #
      # An error report file with more information is saved as:
      # /home/microdoc/cgo/jdk/build/run-test-prebuilt/test-support/jtreg_test_hotspot_jtreg_compiler_eliminateAutobox_TestIntBoxing_java/scratch/hs_err_pid18855.log
      #
      # Compiler replay data is saved as:
      # /home/microdoc/cgo/jdk/build/run-test-prebuilt/test-support/jtreg_test_hotspot_jtreg_compiler_eliminateAutobox_TestIntBoxing_java/scratch/replay_pid18855.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      Reverting the change done in JDK-8264649 using `$ git revert --no-commit 42f4d706` makes the problem disappear and the test doesn't crash anymore.

        1. hs_err_pid18855.log
          43 kB
          Christoph Göttschkes
        2. replay_pid18855.log
          118 kB
          Christoph Göttschkes

            Assignee:
            Hui Shi
            Reporter:
            Christoph Göttschkes (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: